# keminf2

assignment2/Option1_Atom-Atom/: README.rst  doStuff  main.cpp  test.py
assignment2/Option1_Atom-Atom/out original/: 000_r_0_coord.tex  002_r_0_11300100_R.tex  input
assignment2/Option1_Atom-Atom/summary/: Makefile  MakefileAllTarget  MakefileClean  MakefileDep  MakefileImpl  all.tex  master.tex  summary.aux  summary.out  summary.toc
assignment2/code/Option1_Atom-Atom/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  doStuff  main.cpp  test.py  wrapper.sh
assignment2/code/Option1_Atom-Atom/out original/: 001_r_0_10300000_K.aux  001_r_0_10300000_K.tex  002_r_0_11300100_K.tex  002_r_0_11300100_L.tex  003_r_0_combined.dot  006_r_1_10300000_L.tex  006_r_1_10300000_R.tex  007_r_1_11300100_K.tex  007_r_1_11300100_L.tex  post.sh
assignment2/code/Option1_Atom-Atom/summary/: Makefile  MakefileClean  MakefileDep  summary.aux  summary.out  summary.toc
